src/BackEnd/Language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INIT
Rule 1     INIT -> COMMANDS
Rule 2     COMMANDS -> COMMANDS COMMAND
Rule 3     COMMANDS -> COMMAND
Rule 4     COMMAND -> MKDISK
Rule 5     COMMAND -> RMDISK
Rule 6     COMMAND -> FDISK
Rule 7     COMMAND -> MOUNT
Rule 8     COMMAND -> MKFS
Rule 9     COMMAND -> LOGIN
Rule 10    COMMAND -> LOGOUT
Rule 11    COMMAND -> MKGRP
Rule 12    COMMAND -> RMGRP
Rule 13    COMMAND -> MKUSR
Rule 14    COMMAND -> RMUSR
Rule 15    COMMAND -> MKFILE
Rule 16    COMMAND -> MKDIR
Rule 17    COMMAND -> REP
Rule 18    COMMAND -> COMMENTARY
Rule 19    MKDISK -> RW_mkdisk MKDISKPARAMS
Rule 20    MKDISK -> RW_mkdisk
Rule 21    MKDISKPARAMS -> MKDISKPARAMS MKDISKPARAM
Rule 22    MKDISKPARAMS -> MKDISKPARAM
Rule 23    MKDISKPARAM -> RW_size TK_equ TK_number
Rule 24    MKDISKPARAM -> RW_path TK_equ TK_path
Rule 25    MKDISKPARAM -> RW_fit TK_equ TK_fit
Rule 26    MKDISKPARAM -> RW_unit TK_equ TK_unit
Rule 27    RMDISK -> RW_rmdisk RW_path TK_equ TK_path
Rule 28    RMDISK -> RW_rmdisk
Rule 29    FDISK -> RW_fdisk FDISKPARAMS
Rule 30    FDISK -> RW_fdisk
Rule 31    FDISKPARAMS -> FDISKPARAMS FDISKPARAM
Rule 32    FDISKPARAMS -> FDISKPARAM
Rule 33    FDISKPARAM -> RW_size TK_equ TK_number
Rule 34    FDISKPARAM -> RW_path TK_equ TK_path
Rule 35    FDISKPARAM -> RW_name TK_equ TK_id
Rule 36    FDISKPARAM -> RW_unit TK_equ TK_unit
Rule 37    FDISKPARAM -> RW_type TK_equ TK_type
Rule 38    FDISKPARAM -> RW_fit TK_equ TK_fit
Rule 39    MOUNT -> RW_mount MOUNTPARAMS
Rule 40    MOUNT -> RW_mount
Rule 41    MOUNTPARAMS -> MOUNTPARAMS MOUNTPARAM
Rule 42    MOUNTPARAMS -> MOUNTPARAM
Rule 43    MOUNTPARAM -> RW_path TK_equ TK_path
Rule 44    MOUNTPARAM -> RW_name TK_equ TK_id
Rule 45    MKFS -> RW_mkfs MKFSPARAMS
Rule 46    MKFS -> RW_mkfs
Rule 47    MKFSPARAMS -> MKFSPARAMS MKFSPARAM
Rule 48    MKFSPARAMS -> MKFSPARAM
Rule 49    MKFSPARAM -> RW_id TK_equ TK_id
Rule 50    MKFSPARAM -> RW_type TK_equ RW_full
Rule 51    LOGIN -> RW_login LOGINPARAMS
Rule 52    LOGIN -> RW_login
Rule 53    LOGINPARAMS -> LOGINPARAMS LOGINPARAM
Rule 54    LOGINPARAMS -> LOGINPARAM
Rule 55    LOGINPARAM -> RW_user TK_equ TK_id
Rule 56    LOGINPARAM -> RW_pass TK_equ TK_id
Rule 57    LOGINPARAM -> RW_pass TK_equ TK_number
Rule 58    LOGINPARAM -> RW_id TK_equ TK_id
Rule 59    LOGOUT -> RW_logout
Rule 60    MKGRP -> RW_mkgrp RW_name TK_equ TK_id
Rule 61    MKGRP -> RW_mkgrp
Rule 62    RMGRP -> RW_rmgrp RW_name TK_equ TK_id
Rule 63    RMGRP -> RW_rmgrp
Rule 64    MKUSR -> RW_mkusr MKUSERPARAMS
Rule 65    MKUSR -> RW_mkusr
Rule 66    MKUSERPARAMS -> MKUSERPARAMS MKUSERPARAM
Rule 67    MKUSERPARAMS -> MKUSERPARAM
Rule 68    MKUSERPARAM -> RW_user TK_equ TK_id
Rule 69    MKUSERPARAM -> RW_pass TK_equ TK_id
Rule 70    MKUSERPARAM -> RW_pass TK_equ TK_number
Rule 71    MKUSERPARAM -> RW_grp TK_equ TK_id
Rule 72    RMUSR -> RW_rmusr RW_user TK_equ TK_id
Rule 73    RMUSR -> RW_rmusr
Rule 74    MKFILE -> RW_mkfile MKFILEPARAMS
Rule 75    MKFILE -> RW_mkfile
Rule 76    MKFILEPARAMS -> MKFILEPARAMS MKFILEPARAM
Rule 77    MKFILEPARAMS -> MKFILEPARAM
Rule 78    MKFILEPARAM -> RW_path TK_equ TK_path
Rule 79    MKFILEPARAM -> RW_size TK_equ TK_number
Rule 80    MKFILEPARAM -> RW_cont TK_equ TK_path
Rule 81    MKFILEPARAM -> RW_r
Rule 82    MKDIR -> RW_mkdir MKDIRPARAMS
Rule 83    MKDIR -> RW_mkdir
Rule 84    MKDIRPARAMS -> MKDIRPARAMS MKDIRPARAM
Rule 85    MKDIRPARAMS -> MKDIRPARAM
Rule 86    MKDIRPARAM -> RW_path TK_equ TK_path
Rule 87    MKDIRPARAM -> RW_r
Rule 88    REP -> RW_rep REPPARAMS
Rule 89    REP -> RW_rep
Rule 90    REPPARAMS -> REPPARAMS REPPARAM
Rule 91    REPPARAMS -> REPPARAM
Rule 92    REPPARAM -> RW_name TK_equ NAME
Rule 93    REPPARAM -> RW_path TK_equ TK_path
Rule 94    REPPARAM -> RW_id TK_equ TK_id
Rule 95    REPPARAM -> RW_ruta TK_equ TK_path
Rule 96    NAME -> RW_mbr
Rule 97    NAME -> RW_disk
Rule 98    NAME -> RW_bm_inode
Rule 99    NAME -> RW_bm_block
Rule 100   NAME -> RW_tree
Rule 101   NAME -> RW_sb
Rule 102   NAME -> RW_file
Rule 103   COMMENTARY -> commentary

Terminals, with rules where they appear

RW_bm_block          : 99
RW_bm_inode          : 98
RW_cont              : 80
RW_disk              : 97
RW_fdisk             : 29 30
RW_file              : 102
RW_fit               : 25 38
RW_full              : 50
RW_grp               : 71
RW_id                : 49 58 94
RW_login             : 51 52
RW_logout            : 59
RW_mbr               : 96
RW_mkdir             : 82 83
RW_mkdisk            : 19 20
RW_mkfile            : 74 75
RW_mkfs              : 45 46
RW_mkgrp             : 60 61
RW_mkusr             : 64 65
RW_mount             : 39 40
RW_name              : 35 44 60 62 92
RW_pass              : 56 57 69 70
RW_path              : 24 27 34 43 78 86 93
RW_r                 : 81 87
RW_rep               : 88 89
RW_rmdisk            : 27 28
RW_rmgrp             : 62 63
RW_rmusr             : 72 73
RW_ruta              : 95
RW_sb                : 101
RW_size              : 23 33 79
RW_tree              : 100
RW_type              : 37 50
RW_unit              : 26 36
RW_user              : 55 68 72
TK_equ               : 23 24 25 26 27 33 34 35 36 37 38 43 44 49 50 55 56 57 58 60 62 68 69 70 71 72 78 79 80 86 92 93 94 95
TK_fit               : 25 38
TK_id                : 35 44 49 55 56 58 60 62 68 69 71 72 94
TK_number            : 23 33 57 70 79
TK_path              : 24 27 34 43 78 80 86 93 95
TK_type              : 37
TK_unit              : 26 36
commentary           : 103
error                : 

Nonterminals, with rules where they appear

COMMAND              : 2 3
COMMANDS             : 1 2
COMMENTARY           : 18
FDISK                : 6
FDISKPARAM           : 31 32
FDISKPARAMS          : 29 31
INIT                 : 0
LOGIN                : 9
LOGINPARAM           : 53 54
LOGINPARAMS          : 51 53
LOGOUT               : 10
MKDIR                : 16
MKDIRPARAM           : 84 85
MKDIRPARAMS          : 82 84
MKDISK               : 4
MKDISKPARAM          : 21 22
MKDISKPARAMS         : 19 21
MKFILE               : 15
MKFILEPARAM          : 76 77
MKFILEPARAMS         : 74 76
MKFS                 : 8
MKFSPARAM            : 47 48
MKFSPARAMS           : 45 47
MKGRP                : 11
MKUSERPARAM          : 66 67
MKUSERPARAMS         : 64 66
MKUSR                : 13
MOUNT                : 7
MOUNTPARAM           : 41 42
MOUNTPARAMS          : 39 41
NAME                 : 92
REP                  : 17
REPPARAM             : 90 91
REPPARAMS            : 88 90
RMDISK               : 5
RMGRP                : 12
RMUSR                : 14

Parsing method: LALR

state 0

    (0) S' -> . INIT
    (1) INIT -> . COMMANDS
    (2) COMMANDS -> . COMMANDS COMMAND
    (3) COMMANDS -> . COMMAND
    (4) COMMAND -> . MKDISK
    (5) COMMAND -> . RMDISK
    (6) COMMAND -> . FDISK
    (7) COMMAND -> . MOUNT
    (8) COMMAND -> . MKFS
    (9) COMMAND -> . LOGIN
    (10) COMMAND -> . LOGOUT
    (11) COMMAND -> . MKGRP
    (12) COMMAND -> . RMGRP
    (13) COMMAND -> . MKUSR
    (14) COMMAND -> . RMUSR
    (15) COMMAND -> . MKFILE
    (16) COMMAND -> . MKDIR
    (17) COMMAND -> . REP
    (18) COMMAND -> . COMMENTARY
    (19) MKDISK -> . RW_mkdisk MKDISKPARAMS
    (20) MKDISK -> . RW_mkdisk
    (27) RMDISK -> . RW_rmdisk RW_path TK_equ TK_path
    (28) RMDISK -> . RW_rmdisk
    (29) FDISK -> . RW_fdisk FDISKPARAMS
    (30) FDISK -> . RW_fdisk
    (39) MOUNT -> . RW_mount MOUNTPARAMS
    (40) MOUNT -> . RW_mount
    (45) MKFS -> . RW_mkfs MKFSPARAMS
    (46) MKFS -> . RW_mkfs
    (51) LOGIN -> . RW_login LOGINPARAMS
    (52) LOGIN -> . RW_login
    (59) LOGOUT -> . RW_logout
    (60) MKGRP -> . RW_mkgrp RW_name TK_equ TK_id
    (61) MKGRP -> . RW_mkgrp
    (62) RMGRP -> . RW_rmgrp RW_name TK_equ TK_id
    (63) RMGRP -> . RW_rmgrp
    (64) MKUSR -> . RW_mkusr MKUSERPARAMS
    (65) MKUSR -> . RW_mkusr
    (72) RMUSR -> . RW_rmusr RW_user TK_equ TK_id
    (73) RMUSR -> . RW_rmusr
    (74) MKFILE -> . RW_mkfile MKFILEPARAMS
    (75) MKFILE -> . RW_mkfile
    (82) MKDIR -> . RW_mkdir MKDIRPARAMS
    (83) MKDIR -> . RW_mkdir
    (88) REP -> . RW_rep REPPARAMS
    (89) REP -> . RW_rep
    (103) COMMENTARY -> . commentary

    RW_mkdisk       shift and go to state 19
    RW_rmdisk       shift and go to state 20
    RW_fdisk        shift and go to state 21
    RW_mount        shift and go to state 22
    RW_mkfs         shift and go to state 23
    RW_login        shift and go to state 24
    RW_logout       shift and go to state 25
    RW_mkgrp        shift and go to state 26
    RW_rmgrp        shift and go to state 27
    RW_mkusr        shift and go to state 28
    RW_rmusr        shift and go to state 29
    RW_mkfile       shift and go to state 30
    RW_mkdir        shift and go to state 31
    RW_rep          shift and go to state 32
    commentary      shift and go to state 33

    INIT                           shift and go to state 1
    COMMANDS                       shift and go to state 2
    COMMAND                        shift and go to state 3
    MKDISK                         shift and go to state 4
    RMDISK                         shift and go to state 5
    FDISK                          shift and go to state 6
    MOUNT                          shift and go to state 7
    MKFS                           shift and go to state 8
    LOGIN                          shift and go to state 9
    LOGOUT                         shift and go to state 10
    MKGRP                          shift and go to state 11
    RMGRP                          shift and go to state 12
    MKUSR                          shift and go to state 13
    RMUSR                          shift and go to state 14
    MKFILE                         shift and go to state 15
    MKDIR                          shift and go to state 16
    REP                            shift and go to state 17
    COMMENTARY                     shift and go to state 18

state 1

    (0) S' -> INIT .



state 2

    (1) INIT -> COMMANDS .
    (2) COMMANDS -> COMMANDS . COMMAND
    (4) COMMAND -> . MKDISK
    (5) COMMAND -> . RMDISK
    (6) COMMAND -> . FDISK
    (7) COMMAND -> . MOUNT
    (8) COMMAND -> . MKFS
    (9) COMMAND -> . LOGIN
    (10) COMMAND -> . LOGOUT
    (11) COMMAND -> . MKGRP
    (12) COMMAND -> . RMGRP
    (13) COMMAND -> . MKUSR
    (14) COMMAND -> . RMUSR
    (15) COMMAND -> . MKFILE
    (16) COMMAND -> . MKDIR
    (17) COMMAND -> . REP
    (18) COMMAND -> . COMMENTARY
    (19) MKDISK -> . RW_mkdisk MKDISKPARAMS
    (20) MKDISK -> . RW_mkdisk
    (27) RMDISK -> . RW_rmdisk RW_path TK_equ TK_path
    (28) RMDISK -> . RW_rmdisk
    (29) FDISK -> . RW_fdisk FDISKPARAMS
    (30) FDISK -> . RW_fdisk
    (39) MOUNT -> . RW_mount MOUNTPARAMS
    (40) MOUNT -> . RW_mount
    (45) MKFS -> . RW_mkfs MKFSPARAMS
    (46) MKFS -> . RW_mkfs
    (51) LOGIN -> . RW_login LOGINPARAMS
    (52) LOGIN -> . RW_login
    (59) LOGOUT -> . RW_logout
    (60) MKGRP -> . RW_mkgrp RW_name TK_equ TK_id
    (61) MKGRP -> . RW_mkgrp
    (62) RMGRP -> . RW_rmgrp RW_name TK_equ TK_id
    (63) RMGRP -> . RW_rmgrp
    (64) MKUSR -> . RW_mkusr MKUSERPARAMS
    (65) MKUSR -> . RW_mkusr
    (72) RMUSR -> . RW_rmusr RW_user TK_equ TK_id
    (73) RMUSR -> . RW_rmusr
    (74) MKFILE -> . RW_mkfile MKFILEPARAMS
    (75) MKFILE -> . RW_mkfile
    (82) MKDIR -> . RW_mkdir MKDIRPARAMS
    (83) MKDIR -> . RW_mkdir
    (88) REP -> . RW_rep REPPARAMS
    (89) REP -> . RW_rep
    (103) COMMENTARY -> . commentary

    $end            reduce using rule 1 (INIT -> COMMANDS .)
    RW_mkdisk       shift and go to state 19
    RW_rmdisk       shift and go to state 20
    RW_fdisk        shift and go to state 21
    RW_mount        shift and go to state 22
    RW_mkfs         shift and go to state 23
    RW_login        shift and go to state 24
    RW_logout       shift and go to state 25
    RW_mkgrp        shift and go to state 26
    RW_rmgrp        shift and go to state 27
    RW_mkusr        shift and go to state 28
    RW_rmusr        shift and go to state 29
    RW_mkfile       shift and go to state 30
    RW_mkdir        shift and go to state 31
    RW_rep          shift and go to state 32
    commentary      shift and go to state 33

    COMMAND                        shift and go to state 34
    MKDISK                         shift and go to state 4
    RMDISK                         shift and go to state 5
    FDISK                          shift and go to state 6
    MOUNT                          shift and go to state 7
    MKFS                           shift and go to state 8
    LOGIN                          shift and go to state 9
    LOGOUT                         shift and go to state 10
    MKGRP                          shift and go to state 11
    RMGRP                          shift and go to state 12
    MKUSR                          shift and go to state 13
    RMUSR                          shift and go to state 14
    MKFILE                         shift and go to state 15
    MKDIR                          shift and go to state 16
    REP                            shift and go to state 17
    COMMENTARY                     shift and go to state 18

state 3

    (3) COMMANDS -> COMMAND .

    RW_mkdisk       reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_rmdisk       reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_fdisk        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_mount        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_mkfs         reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_login        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_logout       reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_mkgrp        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_rmgrp        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_mkusr        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_rmusr        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_mkfile       reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_mkdir        reduce using rule 3 (COMMANDS -> COMMAND .)
    RW_rep          reduce using rule 3 (COMMANDS -> COMMAND .)
    commentary      reduce using rule 3 (COMMANDS -> COMMAND .)
    $end            reduce using rule 3 (COMMANDS -> COMMAND .)


state 4

    (4) COMMAND -> MKDISK .

    RW_mkdisk       reduce using rule 4 (COMMAND -> MKDISK .)
    RW_rmdisk       reduce using rule 4 (COMMAND -> MKDISK .)
    RW_fdisk        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_mount        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_mkfs         reduce using rule 4 (COMMAND -> MKDISK .)
    RW_login        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_logout       reduce using rule 4 (COMMAND -> MKDISK .)
    RW_mkgrp        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_rmgrp        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_mkusr        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_rmusr        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_mkfile       reduce using rule 4 (COMMAND -> MKDISK .)
    RW_mkdir        reduce using rule 4 (COMMAND -> MKDISK .)
    RW_rep          reduce using rule 4 (COMMAND -> MKDISK .)
    commentary      reduce using rule 4 (COMMAND -> MKDISK .)
    $end            reduce using rule 4 (COMMAND -> MKDISK .)


state 5

    (5) COMMAND -> RMDISK .

    RW_mkdisk       reduce using rule 5 (COMMAND -> RMDISK .)
    RW_rmdisk       reduce using rule 5 (COMMAND -> RMDISK .)
    RW_fdisk        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_mount        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_mkfs         reduce using rule 5 (COMMAND -> RMDISK .)
    RW_login        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_logout       reduce using rule 5 (COMMAND -> RMDISK .)
    RW_mkgrp        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_rmgrp        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_mkusr        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_rmusr        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_mkfile       reduce using rule 5 (COMMAND -> RMDISK .)
    RW_mkdir        reduce using rule 5 (COMMAND -> RMDISK .)
    RW_rep          reduce using rule 5 (COMMAND -> RMDISK .)
    commentary      reduce using rule 5 (COMMAND -> RMDISK .)
    $end            reduce using rule 5 (COMMAND -> RMDISK .)


state 6

    (6) COMMAND -> FDISK .

    RW_mkdisk       reduce using rule 6 (COMMAND -> FDISK .)
    RW_rmdisk       reduce using rule 6 (COMMAND -> FDISK .)
    RW_fdisk        reduce using rule 6 (COMMAND -> FDISK .)
    RW_mount        reduce using rule 6 (COMMAND -> FDISK .)
    RW_mkfs         reduce using rule 6 (COMMAND -> FDISK .)
    RW_login        reduce using rule 6 (COMMAND -> FDISK .)
    RW_logout       reduce using rule 6 (COMMAND -> FDISK .)
    RW_mkgrp        reduce using rule 6 (COMMAND -> FDISK .)
    RW_rmgrp        reduce using rule 6 (COMMAND -> FDISK .)
    RW_mkusr        reduce using rule 6 (COMMAND -> FDISK .)
    RW_rmusr        reduce using rule 6 (COMMAND -> FDISK .)
    RW_mkfile       reduce using rule 6 (COMMAND -> FDISK .)
    RW_mkdir        reduce using rule 6 (COMMAND -> FDISK .)
    RW_rep          reduce using rule 6 (COMMAND -> FDISK .)
    commentary      reduce using rule 6 (COMMAND -> FDISK .)
    $end            reduce using rule 6 (COMMAND -> FDISK .)


state 7

    (7) COMMAND -> MOUNT .

    RW_mkdisk       reduce using rule 7 (COMMAND -> MOUNT .)
    RW_rmdisk       reduce using rule 7 (COMMAND -> MOUNT .)
    RW_fdisk        reduce using rule 7 (COMMAND -> MOUNT .)
    RW_mount        reduce using rule 7 (COMMAND -> MOUNT .)
    RW_mkfs         reduce using rule 7 (COMMAND -> MOUNT .)
    RW_login        reduce using rule 7 (COMMAND -> MOUNT .)
    RW_logout       reduce using rule 7 (COMMAND -> MOUNT .)
    RW_mkgrp        reduce using rule 7 (COMMAND -> MOUNT .)
    RW_rmgrp        reduce using rule 7 (COMMAND -> MOUNT .)
    RW_mkusr        reduce using rule 7 (COMMAND -> MOUNT .)
    RW_rmusr        reduce using rule 7 (COMMAND -> MOUNT .)
